--- a/CenaPlus.UI/Pages/Tests.xaml
+++ b/CenaPlus.UI/Pages/Tests.xaml
@@ -7,11 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
-        <Label Content="Cena Plus Beta Round #1" Foreground="DodgerBlue" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="24"/>
-        <Label Content="1-23-2014 20:00 UTC / 2 hrs / Codeforces Format / Rating 10 / Host: Official" HorizontalAlignment="Left" Margin="0,30,0,0" VerticalAlignment="Top"/>
-        <Label Content="Cena Plus Beta Round #2" Foreground="DodgerBlue" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="24" Margin="0,49,0,0"/>
-        <Label Content="1-24-2014 20:00 UTC / 2 hrs / TopCoder Format / Rating 10 / Host: Official" HorizontalAlignment="Left" Margin="0,79,0,0" VerticalAlignment="Top"/>
-        <Label Content="Cena Plus Beta Round #3" Foreground="DodgerBlue" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="24" Margin="0,100,0,0"/>
-        <Label Content="1-25-2014 20:00 UTC / 2 hrs / OI Format / Rating 10 / Host: Official" HorizontalAlignment="Left" Margin="0,130,0,0" VerticalAlignment="Top"/>
+        <ListBox x:Name="ContestListBox">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel HorizontalAlignment="Left">
+                        <Label Content="{Binding Title}" Foreground="MediumAquamarine" FontSize="24" HorizontalAlignment="Left"/>
+                        <Label Content="{Binding Detail}" HorizontalAlignment="Left" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </UserControl>
