--- a/CenaPlus.UI/Pages/Home.xaml
+++ b/CenaPlus.UI/Pages/Home.xaml
@@ -5,14 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="400">
-    <Grid Style="{StaticResource ContentRoot}" MinWidth="400">
+    <Grid Style="{StaticResource ContentRoot}" MinWidth="400" Loaded="Grid_Loaded">
 
         <TextBlock Text="Connect to a cena plus server." />
         <TextBox Height="23" TextWrapping="Wrap" Text="TextBox" Margin="0,51,0,0" RenderTransformOrigin="-0.397,0.806" HorizontalAlignment="Left" Width="280" VerticalAlignment="Top"/>
         <TextBox Height="23" TextWrapping="Wrap" Text="TextBox" Margin="0,23,0,0" RenderTransformOrigin="-0.397,0.806" HorizontalAlignment="Left" Width="280" VerticalAlignment="Top"/>
         <TextBox Height="23" TextWrapping="Wrap" Text="TextBox" Margin="0,79,0,0" RenderTransformOrigin="-0.397,0.806" HorizontalAlignment="Left" Width="280" VerticalAlignment="Top"/>
         <Button Content="Log in" Width="75" Margin="0,107,0,0" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Click="Button_Click"/>
-        <Button Content="Register an official account" Width="200" Margin="80,107,-11,0" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top"/>
+        <Button Content="Register an official account" Width="200" Margin="80,107,-11,0" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Click="Button_Click_1"/>
 
     </Grid>
 </UserControl>
