--- a/CenaPlus.UI/Pages/Main.xaml
+++ b/CenaPlus.UI/Pages/Main.xaml
@@ -1,16 +1,16 @@
-﻿<UserControl x:Class="CenaPlus.UI.Content.About"
+﻿<UserControl x:Class="CenaPlus.UI.Pages.Main"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
+    <Grid Style="{StaticResource ContentRoot}">
         <ScrollViewer>
             <StackPanel MinWidth="200">
-                <TextBlock Text="ABOUT" Style="{StaticResource Heading2}" />
-                <TextBlock Text="Developers: Gasai Yuno, Onetwogoo, Cuteli, Zaxs, Tangjz, Yaya" Margin="0,0,0,8" TextWrapping="Wrap" />
-                <TextBlock Text="Version: 0.9.0 beta" Margin="0,0,0,8" TextWrapping="Wrap" />
+                <TextBlock Text="BASIC PAGE" Style="{StaticResource Heading2}" />
+                <TextBlock Text="Content goes here" />
             </StackPanel>
         </ScrollViewer>
     </Grid>
