--- a/CenaPlus.UI/Pages/Settings.xaml
+++ b/CenaPlus.UI/Pages/Settings.xaml
@@ -7,8 +7,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
-        <mui:ModernTab Layout="List" SelectedSource="/Content/SettingsAppearance.xaml">
+        <mui:ModernTab Layout="List" SelectedSource="/Content/Compiler.xaml">
             <mui:ModernTab.Links>
+                <mui:Link DisplayName="Compiler" Source="/Content/Compiler.xaml" />
                 <mui:Link DisplayName="appearance" Source="/Content/SettingsAppearance.xaml" />
                 <mui:Link DisplayName="about" Source="/Content/About.xaml" />
             </mui:ModernTab.Links>
