--- a/CenaPlus.UI/MainWindow.xaml
+++ b/CenaPlus.UI/MainWindow.xaml
@@ -13,9 +13,9 @@
                 <mui:Link DisplayName="Local Judge Box" Source="/Pages/JudgeBox.xaml" />
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
-        <mui:LinkGroup DisplayName="settings" GroupName="settings">
+        <mui:LinkGroup DisplayName="Cena Plus" GroupName="settings">
             <mui:LinkGroup.Links>
-                <mui:Link DisplayName="Cena Plus" Source="/Pages/Settings.xaml" />
+                <mui:Link DisplayName="settings" Source="/Pages/Settings.xaml" />
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
         <mui:LinkGroup DisplayName="Cena Plus" GroupName="MainPanel">
