login & contest list

--- a/CenaPlus.Client/Pages/Tests.xaml
+++ b/CenaPlus.Client/Pages/Tests.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300" Loaded="UserControl_Loaded">
     <Grid Style="{StaticResource ContentRoot}">
         <ListBox x:Name="ContestListBox" MouseUp="ContestListBox_MouseUp" SelectedValue="ID">
             <ListBox.ItemTemplate>
