--- a/CenaPlus.Client/Pages/Home.xaml
+++ b/CenaPlus.Client/Pages/Home.xaml
@@ -4,16 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="400">
-    <Grid Style="{StaticResource ContentRoot}" MinWidth="400" Loaded="Grid_Loaded">
+             d:DesignHeight="300" d:DesignWidth="400" Loaded="UserControl_Loaded">
+    <Grid Style="{StaticResource ContentRoot}" MinWidth="400" >
         <StackPanel>
             <TextBlock Text="Connect to a cena plus server." />
             <StackPanel Orientation="Horizontal">
                 <TextBox Name="txtServerAddr"  Text="localhost" />
                 <TextBox Name="txtServerPort"  Text="9999" />
             </StackPanel>
-            <TextBox Name="txtUserName" Text="UserName" />
-            <PasswordBox Name="txtPassword" />
+            <TextBox Name="txtUserName" Text="GasaiYuno" />
+            <PasswordBox Name="txtPassword" Password="GasaiYuno" />
             <StackPanel Orientation="Horizontal">
                 <Button Name="btnLogin" Content="Log in" IsDefault="True" Click="btnLogin_Click"/>
                 <Button Name="btnRegister" Content="Register an official account"/>
