--- a/CenaPlus.Client/Content/Contest_Description.xaml
+++ b/CenaPlus.Client/Content/Contest_Description.xaml
@@ -5,13 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300" Loaded="UserControl_Loaded">
     <Grid Style="{StaticResource ContentRoot}">
-        <ScrollViewer>
-            <StackPanel MinWidth="200">
-                <TextBlock Text="Cena Plus Beta Round #1" Style="{StaticResource Heading2}" />
-                <TextBlock Text="Welcome to cena plus test round." />
-            </StackPanel>
-        </ScrollViewer>
+        <RichTextBox Name="txtDescription" IsReadOnly="True" BorderThickness="0"/>
     </Grid>
 </UserControl>
