--- a/CenaPlus.Client/Content/Problem.xaml
+++ b/CenaPlus.Client/Content/Problem.xaml
@@ -24,7 +24,7 @@
                 </Grid>
                 <TextBlock Text="Hint" Style="{StaticResource Heading2}" Margin="0,10,0,0" />
                 <TextBlock Text="Null" />
-                <Button Content="Submit" HorizontalAlignment="Left" Width="75" Margin="0,10,0,0"/>
+                <Button Content="Submit" HorizontalAlignment="Left" Width="75" Margin="0,10,0,0" Click="Button_Click"/>
 
             </StackPanel>
         </ScrollViewer>
