--- a/CenaPlus.Client/Content/Contest_Description.xaml
+++ b/CenaPlus.Client/Content/Contest_Description.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" Loaded="UserControl_Loaded">
+             d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
         <RichTextBox Name="txtDescription" IsReadOnly="True" BorderThickness="0"/>
     </Grid>
