--- a/CenaPlus.Client/Pages/Home.xaml
+++ b/CenaPlus.Client/Pages/Home.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="400" Loaded="UserControl_Loaded">
+             d:DesignHeight="300" d:DesignWidth="400">
     <Grid Style="{StaticResource ContentRoot}" MinWidth="400" >
         <StackPanel>
             <TextBlock Text="Connect to a cena plus server." Margin="0,0,0,10"/>
