--- a/CenaPlus.Client/Settings/Settings.xaml
+++ b/CenaPlus.Client/Settings/Settings.xaml
@@ -7,11 +7,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
-        <mui:ModernTab Layout="List" SelectedSource="/Content/Compiler.xaml">
+        <mui:ModernTab Layout="List" SelectedSource="/Settings/Compiler.xaml">
             <mui:ModernTab.Links>
-                <mui:Link DisplayName="Compiler" Source="/Content/Compiler.xaml" />
-                <mui:Link DisplayName="appearance" Source="/Content/SettingsAppearance.xaml" />
-                <mui:Link DisplayName="about" Source="/Content/About.xaml" />
+                <mui:Link DisplayName="Compiler" Source="/Settings/Compiler.xaml" />
+                <mui:Link DisplayName="appearance" Source="/Settings/SettingsAppearance.xaml" />
+                <mui:Link DisplayName="about" Source="/Settings/About.xaml" />
             </mui:ModernTab.Links>
         </mui:ModernTab>
     </Grid>
