--- a/CenaPlus.Server/MainWindow.xaml
+++ b/CenaPlus.Server/MainWindow.xaml
@@ -10,24 +10,24 @@
             <mui:LinkGroup.Links>
                 <mui:Link DisplayName="Main" Source="/Pages/Home.xaml" />
                 <mui:Link DisplayName="Server Settings" Source="/Pages/ServerSettings.xaml" />
-                <mui:Link DisplayName="Users Manage" Source="/Pages/Users.xaml" />
-                <mui:Link DisplayName="Problems Manage" Source="/Pages/Problems.xaml" />
-                <mui:Link DisplayName="Contests Manage" Source="/Pages/Contests.xaml" />
+                <mui:Link DisplayName="Users Manage" Source="/ServerMode/Users.xaml" />
+                <mui:Link DisplayName="Problems Manage" Source="/ServerMode/Problems.xaml" />
+                <mui:Link DisplayName="Contests Manage" Source="/ServerMode/Contests.xaml" />
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
         <mui:LinkGroup DisplayName="Node Mode">
             <mui:LinkGroup.Links>
-                <mui:Link DisplayName="authentication" Source="/Pages/Authentication.xaml" />
+                <mui:Link DisplayName="authentication" Source="/NodeMode/Authentication.xaml" />
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
         <mui:LinkGroup DisplayName="settings" GroupName="settings">
             <mui:LinkGroup.Links>
-                <mui:Link DisplayName="software" Source="/Pages/Settings.xaml" />
+                <mui:Link DisplayName="software" Source="/Settings/Settings.xaml" />
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
     </mui:ModernWindow.MenuLinkGroups>
 
     <mui:ModernWindow.TitleLinks>
-        <mui:Link DisplayName="settings" Source="/Pages/Settings.xaml" />
+        <mui:Link DisplayName="settings" Source="/Settings/Settings.xaml" />
     </mui:ModernWindow.TitleLinks>
 </mui:ModernWindow>
