--- a/CenaPlus.Server/ServerMode/Home.xaml
+++ b/CenaPlus.Server/ServerMode/Home.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CenaPlus.Server.Pages.Home"
+﻿<UserControl x:Class="CenaPlus.Server.ServerMode.Home"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
