--- a/CenaPlus.Server/Settings/Settings.xaml
+++ b/CenaPlus.Server/Settings/Settings.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CenaPlus.Server.Pages.Settings"
+﻿<UserControl x:Class="CenaPlus.Server.Settings.Settings"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
