--- a/CenaPlus.Client/Remote/Profile.xaml
+++ b/CenaPlus.Client/Remote/Profile.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CenaPlus.Client.Pages.Profile"
+﻿<UserControl x:Class="CenaPlus.Client.Remote.Profile"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
