--- a/CenaPlus.Client/Remote/Contest/Records.xaml
+++ b/CenaPlus.Client/Remote/Contest/Records.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CenaPlus.Client.Remote.Records"
+﻿<UserControl x:Class="CenaPlus.Client.Remote.Contest.Records"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,14 +8,14 @@
              d:DesignHeight="300" d:DesignWidth="480">
     <Grid Style="{StaticResource ContentRoot}">
         <ScrollViewer Margin="0,40,0,0" VerticalAlignment="Top">
-            <ListBox x:Name="RecordListBox" >
+            <ListBox x:Name="RecordListBox" SelectedValuePath="ID">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <DockPanel Height="50">
                             <Image DockPanel.Dock="Left" Width="50" Height="50" Source="https://www.gravatar.com/avatar/159c4a0a78d0980aca8df9d781d1c755?d\=https://www.SmartOJ.com/img/Non_Avatar.png&amp;s\=50"></Image>
                             <StackPanel HorizontalAlignment="Left">
-                                <TextBlock Margin="10,0,0,0" Text="Accepted" FontSize="18" Foreground="Green" />
-                                <TextBlock Margin="10,0,0,0"  Text="User: Gasai Yuno / P1000 A+B Problem / 31 ms / 423 KB @1-24-2014 20:56" />
+                                <TextBlock Margin="10,0,0,0" Text="{Binding Status}" FontSize="18" Foreground="{Binding StatusColor}" />
+                                <TextBlock Margin="10,0,0,0"  Text="{Binding StatusLine}" />
                             </StackPanel>
                         </DockPanel>
                     </DataTemplate>
@@ -24,7 +24,6 @@
         </ScrollViewer>
         <TextBox HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top" Width="120"/>
         <TextBox HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="ProblemID" VerticalAlignment="Top" Width="120" Margin="125,0,0,0"/>
-        <TextBox HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="TestID" VerticalAlignment="Top" Width="120" Margin="250,0,0,0"/>
         <Button Content="Search" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" FontSize="11" Margin="375,0,-2,0" Height="23"/>
     </Grid>
 </UserControl>
