--- a/CenaPlus.Server/MainWindow.xaml
+++ b/CenaPlus.Server/MainWindow.xaml
@@ -11,7 +11,7 @@
                 <mui:Link DisplayName="Main" Source="/ServerMode/Home.xaml" />
                 <mui:Link DisplayName="Server Settings" Source="/ServerMode/ServerSettings.xaml" />
                 <mui:Link DisplayName="Users Manage" Source="/ServerMode/Users.xaml" />
-                <mui:Link DisplayName="Contests Manage" Source="/ServerMode/Contests.xaml" />
+                <mui:Link DisplayName="Contests Manage" Source="/ServerMode/Tests.xaml" />
                 <mui:Link DisplayName="Problems Manage" Source="/ServerMode/Problems.xaml" />
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
