user manage page fixes

--- a/CenaPlus.Server/ServerMode/Users.xaml
+++ b/CenaPlus.Server/ServerMode/Users.xaml
@@ -24,7 +24,7 @@
         </ScrollViewer>
         <StackPanel Margin="410,30,0,30" x:Name="ProfileDisplay" Visibility="Hidden">
             <Image  HorizontalAlignment="Left" Width="100" Height="100" Source="https://www.gravatar.com/avatar/159c4a0a78d0980aca8df9d781d1c755?d=https://www.SmartOJ.com/img/Non_Avatar.png&amp;s=100" Margin="0,0,0,10"></Image>
-            <TextBlock HorizontalAlignment="Left" Text="Name"></TextBlock>
+            <TextBlock HorizontalAlignment="Left" Text="Username"></TextBlock>
             <TextBox x:Name="UsernameTextBox" Margin="0,0,0,10"/>
             <TextBlock HorizontalAlignment="Left" Text="Name"></TextBlock>
             <TextBox x:Name="NameTextBox" Margin="0,0,0,10"/>
