--- a/CenaPlus.Client/Remote/Home.xaml
+++ b/CenaPlus.Client/Remote/Home.xaml
@@ -8,6 +8,7 @@
     <Grid Style="{StaticResource ContentRoot}" MinWidth="400" >
         <StackPanel>
             <TextBlock Text="Connect to a cena plus server." Margin="0,0,0,10"/>
+            <TextBlock Name="txtFoundServerName"/>
             <StackPanel HorizontalAlignment="Stretch" Margin="0,0,0,10">
                 <TextBox Name="txtServerAddr"  Text="localhost" Margin="0,0,100,0"/>
                 <TextBox Name="txtServerPort" HorizontalAlignment="Right" Width="90"  Text="9999" Margin="10,-23,0,0" />
