--- a/CenaPlus.Client/Remote/Remote.xaml
+++ b/CenaPlus.Client/Remote/Remote.xaml
@@ -27,6 +27,7 @@
         </WrapPanel>
         <StackPanel x:Name="IdentificationPanel" HorizontalAlignment="Right" Width="280">
             <TextBlock x:Name="IdentificationTextBlock" Text="Please select a server." Style="{StaticResource Heading2}" Margin="0,0,0,10"></TextBlock>
+            <Image Height="100" HorizontalAlignment="Center" Source="../Resources/CenaPlusLogo.png" ></Image>
             <TextBlock Text="Username"></TextBlock>
             <TextBox x:Name="UsernameBox" IsEnabled="False" Margin="0,0,0,10"></TextBox>
             <TextBlock Text="Password"></TextBlock>
