--- a/CenaPlus.Server/ServerMode/Users.xaml
+++ b/CenaPlus.Server/ServerMode/Users.xaml
@@ -24,22 +24,22 @@
         </ScrollViewer>
         <StackPanel Margin="410,30,0,30" x:Name="ProfileDisplay" Visibility="Hidden">
             <Image  HorizontalAlignment="Left" Width="100" Height="100" Source="https://www.gravatar.com/avatar/159c4a0a78d0980aca8df9d781d1c755?d=https://www.SmartOJ.com/img/Non_Avatar.png&amp;s=100" Margin="0,0,0,10"></Image>
-            <TextBlock HorizontalAlignment="Left" Text="Username"></TextBlock>
-            <TextBox x:Name="UsernameTextBox" Margin="0,0,0,10"/>
-            <TextBlock HorizontalAlignment="Left" Text="Name"></TextBlock>
-            <TextBox x:Name="NameTextBox" Margin="0,0,0,10"/>
-            <TextBlock HorizontalAlignment="Left" Text="Password"></TextBlock>
-            <PasswordBox Margin="0,0,0,10"/>
-            <Button Content="Save changes" HorizontalAlignment="Left" Margin="0,0,0,10"/>
+            <TextBlock HorizontalAlignment="Left" Text="Account"></TextBlock>
+            <TextBox x:Name="txtName" Margin="0,0,0,10"/>
+            <TextBlock HorizontalAlignment="Left" Text="Nick Name"></TextBlock>
+            <TextBox x:Name="txtNickName" Margin="0,0,0,10"/>
+            <TextBlock HorizontalAlignment="Left" Text="Password(Leave me empty if you don't want to change)"></TextBlock>
+            <PasswordBox Name="txtPassword" Margin="0,0,0,10"/>
+            <Button Name="btnSave" Content="Save changes" HorizontalAlignment="Left" Margin="0,0,0,10" Click="btnSave_Click"/>
         </StackPanel>
         <WrapPanel>
             <TextBox HorizontalAlignment="Left" Height="25" TextWrapping="Wrap" Text="User" VerticalAlignment="Top" Width="120" Margin="0,0,10,0" />
             <Button Content="Query" HorizontalAlignment="Left" VerticalAlignment="Top" Height="25" Width="75"/>
         </WrapPanel>
         <WrapPanel VerticalAlignment="Bottom" Height="26">
-            <Button Content="Delete" Width="75" Margin="0,0,10,0"/>
-            <Button Content="Create temp users"  Margin="0,0,10,0" Click="Button_Click"/>
-            <Button Content="Create a normal user" Margin="0,0,10,0" Click="Button_Click_1"/>
+            <Button Name="btnDelete" Content="Delete" Width="75" Margin="0,0,10,0"/>
+            <Button Name="btnCreate" Content="Create" Margin="0,0,10,0" Click="btnCreate_Click"/>
+            <Button Name="btnBatchCreate" Content="Batch Create"  Margin="0,0,10,0" Click="btnBatchCreate_Click"/>
         </WrapPanel>
     </Grid>
 </UserControl>
