--- a/CenaPlus.Client/Remote/Contest/Status.xaml
+++ b/CenaPlus.Client/Remote/Contest/Status.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CenaPlus.Client.Remote.Contest.Records"
+﻿<UserControl x:Class="CenaPlus.Client.Remote.Contest.Status"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
