--- a/CenaPlus.Client/Remote/Contest/Standings.xaml
+++ b/CenaPlus.Client/Remote/Contest/Standings.xaml
@@ -11,10 +11,10 @@
             <ListView>
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="#" DisplayMemberBinding="{Binding ID}" Width="25"/>
-                        <GridViewColumn Header="Who" DisplayMemberBinding="{Binding ID}" Width="200"/>
-                        <GridViewColumn Header="AC(oi,acm)/Score(cf,tc)" DisplayMemberBinding="{Binding ID}" Width="50"/>
-                        <GridViewColumn Header="Penalty(oi,acm)/Hack(cf,tc)" DisplayMemberBinding="{Binding ID}" Width="50"/>
+                        <GridViewColumn Header="#" DisplayMemberBinding="{Binding Rank}" Width="25"/>
+                        <GridViewColumn Header="Who" DisplayMemberBinding="{Binding Nickname}" Width="200"/>
+                        <GridViewColumn Header="AC(oi,acm)/Score(cf,tc)" DisplayMemberBinding="{Binding Item1}" Width="50"/>
+                        <GridViewColumn Header="Penalty(oi,acm)/Hack(cf,tc)" DisplayMemberBinding="{Binding Item2}" Width="50"/>
                     </GridView>
                 </ListView.View>
             </ListView>
