--- a/CenaPlus.Client/Remote/Contest/Description.xaml
+++ b/CenaPlus.Client/Remote/Contest/Description.xaml
@@ -6,7 +6,7 @@
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Style="{StaticResource ContentRoot}">
+    <Grid>
         <RichTextBox Name="txtDescription" IsReadOnly="True" BorderThickness="0"/>
     </Grid>
 </UserControl>
