--- a/CenaPlus.Client/Remote/Contest/Hack.xaml
+++ b/CenaPlus.Client/Remote/Contest/Hack.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CenaPlus.Client.Remote.Hack"
+﻿<UserControl x:Class="CenaPlus.Client.Remote.Contest.Hack"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
              d:DesignHeight="480" d:DesignWidth="800">
-    <Grid Style="{StaticResource ContentRoot}" MinWidth="800">
+    <Grid>
         <ScrollViewer Margin="0,0,300,0">
             <TextBox IsEnabled="False" AcceptsReturn="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">#include &lt;iostream&gt;</TextBox>
         </ScrollViewer>
