--- a/CenaPlus.Client/Remote/Contest/Statistics.xaml
+++ b/CenaPlus.Client/Remote/Contest/Statistics.xaml
@@ -6,7 +6,7 @@
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="500">
-    <Grid Style="{StaticResource ContentRoot}">
+    <Grid>
         <TextBlock Text="Statistics" Style="{StaticResource Heading2}" />
         <ListView Margin="0,30,0,0" x:Name="StatisticsListView">
             <ListView.View>
