--- a/CenaPlus.Client/Remote/Contest/Status.xaml
+++ b/CenaPlus.Client/Remote/Contest/Status.xaml
@@ -6,7 +6,7 @@
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="480">
-    <Grid Style="{StaticResource ContentRoot}">
+    <Grid>
         <ScrollViewer Margin="0,40,0,0" VerticalAlignment="Top">
             <ListBox x:Name="RecordListBox" SelectedValuePath="ID" SelectionChanged="RecordListBox_SelectionChanged">
                 <ListBox.ItemTemplate>
