--- a/CenaPlus.Client/Settings/Compiler.xaml
+++ b/CenaPlus.Client/Settings/Compiler.xaml
@@ -6,7 +6,7 @@
              xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Style="{StaticResource ContentRoot}">
+    <Grid>
         <ScrollViewer>
             <StackPanel MinWidth="200">
                 <TextBlock Text="Compiler" Style="{StaticResource Heading2}" />
